fix: impressum text align

--- a/impressum.css
+++ b/impressum.css
@@ -7,13 +7,14 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #333;
+  color: black;
   font-family: "zabras", Arial, Helvetica, sans-serif;
   background-image: url("assets/img/desert.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   font-size: 22px;
+  text-align: center;
 }
 h1 {
   font-size: 64px;
